Pushing CSS and method changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="\public\bracelet.png">
+    <link rel="icon" href="\bracelet.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tsfbd.com</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,4 +13,5 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <footer><p style="text-align: center;">Copyright Me 2024</p></footer>
 </html>
